feat: normalization function calculates

--- a/hack/calculates.ipynb
+++ b/hack/calculates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "0ea4240e-ae8c-4586-94b0-0999d2e283e8",
    "metadata": {},
    "outputs": [],
@@ -10,20 +10,116 @@
     "import math\n",
     "\n",
     "# mem_g=[1,2,5,8,10,15,20,32,40,50,60]\n",
-    "mem_g = [i for i in range(1,100)]"
+    "mem_g = [0.1,0.2,1.1,1.2,1.5,2,3,5,6,7,9,10,13,15,17,20,25,32]\n",
+    "mem_g = list(range(32))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf5557b4-3424-49bb-8104-219a98e464c8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2fd5a782-cf4c-4b73-b486-36be68759022",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_allocatable=32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1666c4fb-4792-4810-a54e-835ddeb0e05c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalization(max_value,value):\n",
+    "    return value/max_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5d635bc1-d8ab-4564-85f9-3944f3b86fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized = list(zip(mem_g,list(map(lambda x:normalization(_allocatable,x),mem_g))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c1e884d8-4c42-446b-bc0b-9fd2f277cb93",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.0),\n",
+       " (1, 0.03125),\n",
+       " (2, 0.0625),\n",
+       " (3, 0.09375),\n",
+       " (4, 0.125),\n",
+       " (5, 0.15625),\n",
+       " (6, 0.1875),\n",
+       " (7, 0.21875),\n",
+       " (8, 0.25),\n",
+       " (9, 0.28125),\n",
+       " (10, 0.3125),\n",
+       " (11, 0.34375),\n",
+       " (12, 0.375),\n",
+       " (13, 0.40625),\n",
+       " (14, 0.4375),\n",
+       " (15, 0.46875),\n",
+       " (16, 0.5),\n",
+       " (17, 0.53125),\n",
+       " (18, 0.5625),\n",
+       " (19, 0.59375),\n",
+       " (20, 0.625),\n",
+       " (21, 0.65625),\n",
+       " (22, 0.6875),\n",
+       " (23, 0.71875),\n",
+       " (24, 0.75),\n",
+       " (25, 0.78125),\n",
+       " (26, 0.8125),\n",
+       " (27, 0.84375),\n",
+       " (28, 0.875),\n",
+       " (29, 0.90625),\n",
+       " (30, 0.9375),\n",
+       " (31, 0.96875)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalized"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "6ac74d6d-ece3-404f-a359-ed8af2692e2a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## sigmoid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "c908eb46-b6a9-46e9-8985-246bf8b34420",
    "metadata": {},
    "outputs": [],
@@ -34,127 +130,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "a42ca15f-c5ed-42d3-a607-1f5a89dcb59a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 0.52497918747894),\n",
-       " (2, 0.549833997312478),\n",
-       " (3, 0.574442516811659),\n",
-       " (4, 0.598687660112452),\n",
-       " (5, 0.6224593312018546),\n",
-       " (6, 0.6456563062257954),\n",
-       " (7, 0.6681877721681662),\n",
-       " (8, 0.6899744811276125),\n",
-       " (9, 0.7109495026250039),\n",
-       " (10, 0.7310585786300049),\n",
-       " (11, 0.7502601055951177),\n",
-       " (12, 0.7685247834990175),\n",
-       " (13, 0.7858349830425586),\n",
-       " (14, 0.8021838885585817),\n",
-       " (15, 0.8175744761936437),\n",
-       " (16, 0.8320183851339245),\n",
-       " (17, 0.8455347349164652),\n",
-       " (18, 0.8581489350995123),\n",
-       " (19, 0.8698915256370021),\n",
-       " (20, 0.8807970779778823),\n",
-       " (21, 0.8909031788043871),\n",
-       " (22, 0.9002495108803148),\n",
-       " (23, 0.9088770389851438),\n",
-       " (24, 0.9168273035060777),\n",
-       " (25, 0.9241418199787566),\n",
-       " (26, 0.9308615796566533),\n",
-       " (27, 0.9370266439430035),\n",
-       " (28, 0.9426758241011313),\n",
-       " (29, 0.9478464369215823),\n",
-       " (30, 0.9525741268224334),\n",
-       " (31, 0.9568927450589139),\n",
-       " (32, 0.9608342772032357),\n",
-       " (33, 0.9644288107273639),\n",
-       " (34, 0.9677045353015494),\n",
-       " (35, 0.9706877692486436),\n",
-       " (36, 0.973403006423134),\n",
-       " (37, 0.9758729785823308),\n",
-       " (38, 0.9781187290638694),\n",
-       " (39, 0.9801596942659225),\n",
-       " (40, 0.9820137900379085),\n",
-       " (41, 0.9836975006285591),\n",
-       " (42, 0.9852259683067269),\n",
-       " (43, 0.9866130821723351),\n",
-       " (44, 0.9878715650157257),\n",
-       " (45, 0.9890130573694068),\n",
-       " (46, 0.9900481981330957),\n",
-       " (47, 0.990986701347152),\n",
-       " (48, 0.9918374288468401),\n",
-       " (49, 0.9926084586557181),\n",
-       " (50, 0.9933071490757153),\n",
-       " (51, 0.9939401985084158),\n",
-       " (52, 0.9945137011005495),\n",
-       " (53, 0.995033198349943),\n",
-       " (54, 0.9955037268390589),\n",
-       " (55, 0.995929862284104),\n",
-       " (56, 0.9963157601005641),\n",
-       " (57, 0.9966651926925867),\n",
-       " (58, 0.9969815836752917),\n",
-       " (59, 0.997268039236989),\n",
-       " (60, 0.9975273768433653),\n",
-       " (61, 0.9977621514787236),\n",
-       " (62, 0.9979746796109501),\n",
-       " (63, 0.9981670610575072),\n",
-       " (64, 0.9983411989198255),\n",
-       " (65, 0.998498817743263),\n",
-       " (66, 0.9986414800495711),\n",
-       " (67, 0.9987706013787226),\n",
-       " (68, 0.9988874639671398),\n",
-       " (69, 0.9989932291799144),\n",
-       " (70, 0.9990889488055994),\n",
-       " (71, 0.9991755753136017),\n",
-       " (72, 0.9992539711661633),\n",
-       " (73, 0.9993249172693672),\n",
-       " (74, 0.9993891206405656),\n",
-       " (75, 0.9994472213630764),\n",
-       " (76, 0.9994997988929205),\n",
-       " (77, 0.9995473777767595),\n",
-       " (78, 0.9995904328350139),\n",
-       " (79, 0.9996293938593735),\n",
-       " (80, 0.9996646498695336),\n",
-       " (81, 0.9996965529699712),\n",
-       " (82, 0.9997254218438986),\n",
-       " (83, 0.9997515449181605),\n",
-       " (84, 0.9997751832297667),\n",
-       " (85, 0.9997965730219448),\n",
-       " (86, 0.9998159280950366),\n",
-       " (87, 0.9998334419352227),\n",
-       " (88, 0.9998492896419403),\n",
-       " (89, 0.9998636296729204),\n",
-       " (90, 0.9998766054240137),\n",
-       " (91, 0.9998883466593704),\n",
-       " (92, 0.9998989708060922),\n",
-       " (93, 0.9999085841261478),\n",
-       " (94, 0.9999172827771484),\n",
-       " (95, 0.9999251537724895),\n",
-       " (96, 0.9999322758503804),\n",
-       " (97, 0.9999387202603833),\n",
-       " (98, 0.9999445514752772),\n",
-       " (99, 0.9999498278353162)]"
+       "[((0, 0.0), 0.5),\n",
+       " ((1, 0.03125), 0.5312093733737563),\n",
+       " ((2, 0.0625), 0.5621765008857981),\n",
+       " ((3, 0.09375), 0.5926665999540697),\n",
+       " ((4, 0.125), 0.6224593312018546),\n",
+       " ((5, 0.15625), 0.6513548646660542),\n",
+       " ((6, 0.1875), 0.679178699175393),\n",
+       " ((7, 0.21875), 0.7057850278370112),\n",
+       " ((8, 0.25), 0.7310585786300049),\n",
+       " ((9, 0.28125), 0.7549149868676283),\n",
+       " ((10, 0.3125), 0.7772998611746911),\n",
+       " ((11, 0.34375), 0.7981867777396212),\n",
+       " ((12, 0.375), 0.8175744761936437),\n",
+       " ((13, 0.40625), 0.8354835371034369),\n",
+       " ((14, 0.4375), 0.8519528019683106),\n",
+       " ((15, 0.46875), 0.8670357598021706),\n",
+       " ((16, 0.5), 0.8807970779778823),\n",
+       " ((17, 0.53125), 0.8933094060543487),\n",
+       " ((18, 0.5625), 0.9046505351008906),\n",
+       " ((19, 0.59375), 0.9149009549929797),\n",
+       " ((20, 0.625), 0.9241418199787566),\n",
+       " ((21, 0.65625), 0.9324533088603709),\n",
+       " ((22, 0.6875), 0.9399133498259924),\n",
+       " ((23, 0.71875), 0.9465966702001757),\n",
+       " ((24, 0.75), 0.9525741268224334),\n",
+       " ((25, 0.78125), 0.9579122720843811),\n",
+       " ((26, 0.8125), 0.9626731126558706),\n",
+       " ((27, 0.84375), 0.9669140216112958),\n",
+       " ((28, 0.875), 0.9706877692486436),\n",
+       " ((29, 0.90625), 0.9740426428022031),\n",
+       " ((30, 0.9375), 0.9770226300899744),\n",
+       " ((31, 0.96875), 0.9796676466573412)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(zip(mem_g ,list(map(lambda x:sigmoid(x/10),mem_g))))"
+    "list(zip(normalized ,list(map(lambda x:sigmoid(x[1]*4),normalized))))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91b4a4b-6fd3-40fa-8bac-8afcbea9c297",
+   "id": "36a356c1-36f1-4b59-a4c6-4df0b31cba8d",
    "metadata": {},
    "outputs": [],
    "source": []
